= 4.5.7 - 21.03.2022 =
Changed: Removed Download Duplicator from LITE vs PRO page ( https://github.com/WPChill/download-monitor/issues/872 )
Changed: Versions from Gutenberg block now mention `n/a #id` as title if they are non-versioned ( https://github.com/WPChill/download-monitor/issues/873 )

= 4.5.6 - 14.03.2022 =
Fixed: Endpoint changing value notice and flushing permalinks on endpoint change ( https://github.com/WPChill/download-monitor/issues/801 )
Fixed: Place back the categories column in admin list view and change the copy shortcode functionality ( https://github.com/WPChill/download-monitor/issues/821 )
Changed: Removed thumb column from Admin list table
Fixed: PolyLang compatibility ( https://github.com/WPChill/download-monitor/issues/733 )
Changed: Uploader enhancement ( https://github.com/WPChill/download-monitor/issues/869 )

= 4.5.5 - 08.03.2022 =
* Fixed: Uninstall now completely removes everything based on selection ( https://github.com/WPChill/download-monitor/issues/761 )
* Added: New option to display featured downloads for the [downloads] shortcode ( https://github.com/WPChill/download-monitor/issues/624)
* Added: Shortcode visible on all downloads page ( #821 )
* Fixed: Set our own orderby param on Admin Dashboard ( https://github.com/WPChill/download-monitor/issues/809 )
* Fixed: PayPal - new API ( https://github.com/WPChill/download-monitor/issues/861, https://github.com/WPChill/download-monitor/issues/796, https://github.com/WPChill/download-monitor/issues/665, https://github.com/WPChill/download-monitor/issues/636 )
* Fixed: Direct upload button ( https://github.com/WPChill/download-monitor/issues/863 )
* Fixed: Escaping on shop e-mail templates
* Fixed: Issue preventing a product to be added to cart. ( https://github.com/WPChill/download-monitor/issues/865 )

= 4.5.4 - 28.02.2022 =
Added: Included DLM Download Duplicator as core Download Monitor function ( https://github.com/WPChill/download-monitor/issues/848 )